[gd_scene load_steps=13 format=3 uid="uid://dyw300u7i63lr"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://b35pygotja0us" path="res://Assets/sounds/start.ogg" id="2"]
[ext_resource type="AudioStream" uid="uid://bmbxm2r0acxd8" path="res://Assets/sounds/bg00.ogg" id="3"]
[ext_resource type="Texture2D" uid="uid://cl5hmqlfntus1" path="res://Assets/Night_Sky.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c5puh3816yvvr" path="res://icon.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dpggtfvanxob4" path="res://Assets/flag_top.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bx6q11y3kwrv4" path="res://Assets/flag_mid.png" id="7"]
[ext_resource type="Texture2D" uid="uid://dlbcahfeoot6k" path="res://Assets/start.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dm8qpb8koueb2" path="res://Assets/start_hover.png" id="9"]
[ext_resource type="FontFile" uid="uid://n4cpfdxsu7jr" path="res://Assets/font/Parasite Game - Personal Use.ttf" id="10_gxir3"]

[sub_resource type="Animation" id="1"]
resource_name = "Flag"
length = 5.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(466.263, 117.946), Vector2(547.26, 117.946), Vector2(478.566, 117.946)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("icon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(3.85773, 2.43737), Vector2(1.32658, 2.43737), Vector2(3.47325, 2.43737)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b5fx1"]
_data = {
"Flag": SubResource("1")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1")

[node name="Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2")
volume_db = 1.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")
volume_db = 5.0
autoplay = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(321.41, 460.327)
scale = Vector2(1.51371, 1.33175)
texture = ExtResource("4")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b5fx1")
}

[node name="icon" type="Sprite2D" parent="."]
position = Vector2(466.263, 117.946)
scale = Vector2(3.85773, 2.43737)
texture = ExtResource("5")

[node name="Sprite2D 2" type="Sprite2D" parent="."]
position = Vector2(592.893, 145.228)
scale = Vector2(0.367441, 1.05282)
texture = ExtResource("6")

[node name="Sprite3" type="Sprite2D" parent="."]
position = Vector2(593.291, 572.532)
scale = Vector2(0.3649, 2.47125)
texture = ExtResource("7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 224.0
offset_top = 578.0
offset_right = 524.0
offset_bottom = 878.0
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("8")

[node name="Vertical" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 202.0
offset_right = 429.0
offset_bottom = 282.0
size_flags_vertical = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0.226562, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("10_gxir3")
text = "Vertical"

[node name="Runner" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 272.0
offset_right = 429.0
offset_bottom = 352.0
size_flags_vertical = 0
mouse_filter = 1
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("10_gxir3")
text = "Runner"

[node name="Game" type="Label" parent="."]
layout_mode = 0
offset_left = 93.0
offset_top = 188.0
offset_right = 318.0
offset_bottom = 364.0
size_flags_vertical = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0.226562, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("10_gxir3")
text = "Game"

[node name="Over" type="Label" parent="."]
layout_mode = 0
offset_left = 93.0
offset_top = 258.0
offset_right = 318.0
offset_bottom = 434.0
size_flags_vertical = 0
mouse_filter = 1
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("10_gxir3")
text = "Over"

[node name="Text" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 46.0
offset_top = 515.0
offset_right = 305.0
offset_bottom = 606.0
size_flags_vertical = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0.0078125, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 5
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("10_gxir3")
text = "Best:"

[node name="HighScore" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 425.0
offset_top = 515.0
offset_right = 600.0
offset_bottom = 606.0
size_flags_vertical = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0.0078125, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 5
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("10_gxir3")
text = "0"

[connection signal="finished" from="Start" to="." method="_on_Start_finished"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
